--- a/intrucao_Py.ipynb
+++ b/intrucao_Py.ipynb
@@ -2409,12 +2409,97 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "b5e185c6",
    "metadata": {},
+   "source": [
+    "##Exercícios #1 - Estruturas de dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bd0ca79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Olá Leandro, o seu IMC possui o valor de: 22.20Kg/m2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Exercício 1 - Utilizando o buit-in method input(), crie um programa que receba a altura e o peso de uma pessoa e imprima na tela o IMC da mesma\n",
+    "nome = input('Insira seu nome: ').capitalize()\n",
+    "altura = float(input('Digite a sua altura em m: '))\n",
+    "peso = float(input('Digite o seu peso: '))\n",
+    "imc = peso/(altura**2)\n",
+    "print(f'Olá {nome}, o seu IMC possui o valor de: {imc:.2f}Kg/m2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fe7cd6a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "olá Leandro como vai?\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Exercício 2 - Escreva um programa que pergunte o nome completo do usuário e cumprimente o mesmo pelo primeiro nome\n",
+    "nome_completo = input('Digite o seu nome completo: ').capitalize()\n",
+    "first_name = nome_completo.split(' ')\n",
+    "print(f'olá {first_name[0]} como vai?')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e96ae790",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O dominio do seu email é: leandroclv\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Exercício 3 - Desenhe um código que extraia o domínio deum e-mail informado\n",
+    "email = input('Digite o seu email completo')\n",
+    "dominio = email.split('@')\n",
+    "print(f'O dominio do seu email é: {dominio[0]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8ebefd8f",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Exercício 4 - Faça um programa para uma loja de tintas. A pessoa informa a área em m2 que deseja pintar, e o script calculará a quantidade de latas de tinta que a pessoa deve comprar e o valor. Considere que cada litro de tinta pinta 3m2, que cada lata contém 18L e que custa R$ 80."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "235a33d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Exercício 5 - Faça um Programa que pergunte quanto você ganha por hora e o número de horas trabalhadas no mês. Calcule e mostre o total do seu salário no referido mês, sabendo-se que são descontados 11% para o Imposto de Renda, 8% para o INSS e 5% para o sindicato, faça um programa que nos dê: 1. Salário bruto. 2. Quanto pagou ao INSS. 3. Quanto pagou ao sindicato. 4. O salário líquido.\""
+   ]
   }
  ],
  "metadata": {
