--- a/intrucao_Py.ipynb
+++ b/intrucao_Py.ipynb
@@ -2798,8 +2798,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c560849f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "olá\n",
+      "0\n",
+      "olá\n",
+      "1\n",
+      "olá\n",
+      "2\n",
+      "olá\n",
+      "3\n",
+      "olá\n",
+      "4\n",
+      "olá\n",
+      "5\n",
+      "olá\n",
+      "6\n",
+      "olá\n",
+      "7\n",
+      "olá\n",
+      "8\n",
+      "olá\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    print('olá')\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5e3e0152",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c\n",
+      "b\n",
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = {'a', 'b', 'c'}\n",
+    "for i in l:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "389562c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L\n",
+      "e\n",
+      "a\n",
+      "n\n",
+      "d\n",
+      "r\n",
+      "o\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = 'Leandro'\n",
+    "for i in l:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e283a0e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 é par\n",
+      "2 é par\n",
+      "4 é par\n",
+      "6 é par\n",
+      "8 é par\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    if i % 2 == 0:\n",
+    "        print(f'{i} é par')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb61d8d0",
    "metadata": {},
    "outputs": [],
    "source": []
