--- a/intrucao_Py.ipynb
+++ b/intrucao_Py.ipynb
@@ -3064,11 +3064,427 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3196c441",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "word = 'string'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "91bad517",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_words = []\n",
+    "for i in word:\n",
+    "    list_words.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "82251397",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['s', 't', 'r', 'i', 'n', 'g']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0b277c6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['s', 't', 'r', 'i', 'n', 'g']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_words = [i for i in word ]\n",
+    "list_words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d265f8a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_2 = [x**2 for x in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "09c42626",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "561602c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_3 = [x for x in range(10) if x % 2 == 0]\n",
+    "list_3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2ea891f",
+   "metadata": {},
+   "source": [
+    "##Funções"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c48213e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def diga_ola():\n",
+    "    print('Oi')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "413067ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oi\n"
+     ]
+    }
+   ],
+   "source": [
+    "diga_ola()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7927ddd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def saudação(nome):\n",
+    "    print(f'Olá {nome}, como vai?')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "53dc85cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Olá Leandro, como vai?\n"
+     ]
+    }
+   ],
+   "source": [
+    "saudação('Leandro')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6b45d726",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def impares(x):\n",
+    "    return [i for i in range(x) if i % 2 == 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "415566ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5, 7, 9]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "impares(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "33aa78da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "impares(11).pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "08a51d44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_num(num1, num2):\n",
+    "    return num1 + num2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "10c34b98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add_num(10, 20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b918b85e",
+   "metadata": {},
+   "source": [
+    "##Função Lambda"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "bd2d32ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def elevear_quadrado(x):\n",
+    "    return x ** 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "26fbab89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "elevear_quadrado(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4d228a9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = lambda x: x** 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "4f649cdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f51b55a1",
+   "metadata": {},
+   "source": [
+    "##Exercícios #2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05c71c4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Exercício 1 - Faça um programa para a leitura de duas notas parciais de um aluno. O programa deve calcular a média alcançada por aluno e apresentar:\n",
+    "    #- A mensagem \\\"Aprovado\\\", se a média alcançada for maior ou igual a 7;,\n",
+    "    #- A mensagem \\\"Reprovado\\\", se a média for menor do que 7;\n",
+    "    #- A mensagem \\\"Aprovado com Distinção\\\", se a média for igual a 10."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eec0af82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Exercício 2 - Escreva um script que leia três números e mostre o maior e o menor deles."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "600201ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercício 3 - Escreva um nome na vertical em escada.\n",
+    "    #Exemplo: \n",
+    "    #F,\n",
+    "    #FU,\n",
+    "    #FUL,\n",
+    "    #FULA,\n",
+    "    #FULAN,\n",
+    "    #FULANO."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "8a6627ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Exercício 4 - A série de Fibonacci é formada pela seqüência 1,1,2,3,5,8,13,21,34,55,... (o próximo termo, a partir do terceiro, é sempre gerado a partir do somatório dos últimos dois). Faça um programa capaz de gerar a série até o n−ésimo termo (onde o valor n deve ser inserido pelo usuário)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "8505cf6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Exercício 5 - Faça um programa que leia e valide as seguintes informações:\n",
+    "    #- Nome: maior que 3 caracteres;\n",
+    "    #- Idade: entre 0 e 150;\n",
+    "    #- Salário: maior que zero;\n",
+    "    #- Sexo: 'f' ou 'm';\n",
+    "    #- Estado Civil: 's', 'c', 'v', 'd'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "accda254",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Exercício 6 - Faça um programa que peça um número inteiro e determine se ele é ou não um número primo. Um número primo é aquele que é divisível somente por ele mesmo e por 1.\n",
+    "#Dica: Utilize o operador aritmético `%`, que retorna o resto da divisão de dois números."
+   ]
   }
  ],
  "metadata": {
