--- a/intrucao_Py.ipynb
+++ b/intrucao_Py.ipynb
@@ -3415,12 +3415,31 @@
    "execution_count": null,
    "id": "05c71c4f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sua média foi 8.0 e você foi aprovado\n"
+     ]
+    }
+   ],
    "source": [
     "#Exercício 1 - Faça um programa para a leitura de duas notas parciais de um aluno. O programa deve calcular a média alcançada por aluno e apresentar:\n",
     "    #- A mensagem \\\"Aprovado\\\", se a média alcançada for maior ou igual a 7;,\n",
     "    #- A mensagem \\\"Reprovado\\\", se a média for menor do que 7;\n",
-    "    #- A mensagem \\\"Aprovado com Distinção\\\", se a média for igual a 10."
+    "    #- A mensagem \\\"Aprovado com Distinção\\\", se a média for igual a 10.\n",
+    "\n",
+    "nota1 = float(input('Digite a primeira nota: '))\n",
+    "nota2 = float(input('Digite a segunda nota: '))\n",
+    "media = (nota1 + nota2) /2\n",
+    "\n",
+    "if media == 10:\n",
+    "    print(f'Sua média foi {media:.1f} e você foi aprovando com distinção')\n",
+    "elif media >= 7:\n",
+    "    print(f'Sua média foi {media:.1f} e você foi aprovado')\n",
+    "else:\n",
+    "    print(f'Sua média foi {media:.1f} e você foi reprovado')"
    ]
   },
   {
@@ -3428,17 +3447,65 @@
    "execution_count": null,
    "id": "eec0af82",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O maior número é o 6 e o menor é o 3\n"
+     ]
+    }
+   ],
    "source": [
-    "#Exercício 2 - Escreva um script que leia três números e mostre o maior e o menor deles."
+    "#Exercício 2 - Escreva um script que leia três números e mostre o maior e o menor deles.\n",
+    "num1 = int(input('Digite o 1° número: '))\n",
+    "num2 = int(input('Digite o 2° número: '))\n",
+    "num3 = int(input('Digite o 3° número: '))\n",
+    "\n",
+    "if num1 > num2 and num1 > num3:\n",
+    "    maior = num1\n",
+    "elif num2 > num1 and num2 > num3:\n",
+    "    maior = num2\n",
+    "else:\n",
+    "    maior = num3\n",
+    "    \n",
+    "if num1 < num2 and num1 < num3:\n",
+    "    menor = num1\n",
+    "elif num2 < num1 and num2 < num3:\n",
+    "    menor = num2\n",
+    "else:\n",
+    "    menor = num3\n",
+    "print(f'O maior número é o {maior} e o menor é o {menor}')\n",
+    "\n",
+    "#list_nums = []\n",
+    "#for i in range(3):\n",
+    "    #print(f'Informe {i + 1}° número: ')\n",
+    "    #list_nums.append(x)\n",
+    "#list_nums.sort()\n",
+    "#print(f'O maior número é o {list_nums[-1]} e o menor número é o {list_nums[0]}')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "600201ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "l\n",
+      "le\n",
+      "lea\n",
+      "lean\n",
+      "leand\n",
+      "leandr\n",
+      "leandro\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercício 3 - Escreva um nome na vertical em escada.\n",
     "    #Exemplo: \n",
@@ -3447,7 +3514,12 @@
     "    #FUL,\n",
     "    #FULA,\n",
     "    #FULAN,\n",
-    "    #FULANO."
+    "    #FULANO.\n",
+    "    \n",
+    "nome = input('Digite o seu nome')\n",
+    "\n",
+    "for i in range(len(nome)+1):\n",
+    "    print(nome[:i])"
    ]
   },
   {
@@ -3455,14 +3527,34 @@
    "execution_count": 31,
    "id": "8a6627ba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1,2,3,5,8,13,21,34,55,89,144,"
+     ]
+    }
+   ],
    "source": [
-    "#Exercício 4 - A série de Fibonacci é formada pela seqüência 1,1,2,3,5,8,13,21,34,55,... (o próximo termo, a partir do terceiro, é sempre gerado a partir do somatório dos últimos dois). Faça um programa capaz de gerar a série até o n−ésimo termo (onde o valor n deve ser inserido pelo usuário)."
+    "#Exercício 4 - A série de Fibonacci é formada pela seqüência 1,1,2,3,5,8,13,21,34,55,... (o próximo termo, a partir do terceiro, é sempre gerado a partir do somatório dos últimos dois). Faça um programa capaz de gerar a série até o n−ésimo termo (onde o valor n deve ser inserido pelo usuário).\n",
+    "\n",
+    "termo = int(input('Qual o tamanho da sequência de Fibonacci você deseja ver: '))\n",
+    "v0 = 0\n",
+    "v1 = 1\n",
+    "v = 1\n",
+    "print(1)\n",
+    "for i in range(termo + 1):\n",
+    "    print(v, end=',')\n",
+    "    v0 = v1\n",
+    "    v1 = v\n",
+    "    v = v1 + v0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "8505cf6e",
    "metadata": {},
    "outputs": [],
@@ -3472,7 +3564,31 @@
     "    #- Idade: entre 0 e 150;\n",
     "    #- Salário: maior que zero;\n",
     "    #- Sexo: 'f' ou 'm';\n",
-    "    #- Estado Civil: 's', 'c', 'v', 'd'."
+    "    #- Estado Civil: 's', 'c', 'v', 'd'.\n",
+    "nome = input('Digiteo seu nome: ')\n",
+    "while len(nome) <= 3:\n",
+    "    print('O nome deve conter mais de 3 caracteres!')\n",
+    "    nome = input('Digite seu nome: ')\n",
+    "\n",
+    "idade = int(input('Digite a sua idade: '))\n",
+    "while (idade <= 0) or (idade >= 150):\n",
+    "    print('A idade deve estar entre 0 e 150!')\n",
+    "    idade = int(input('Digite a sua idade: '))\n",
+    "\n",
+    "salario = float(input('Digite o seu salário: '))\n",
+    "while salario <= 0:\n",
+    "    print('O salário deve ser maior que 0!')\n",
+    "    nome = input('Digite seu salário: ')\n",
+    "\n",
+    "sexo = input('Digite o seu sexo (f ou m): ').lower()\n",
+    "while sexo not in ['m', 'f']:\n",
+    "    print('O sexo deve ser \"m\" ou \"f\"!')\n",
+    "    nome = input('Digite o seu sexo: ')\n",
+    "\n",
+    "estado_civil = input('Digite o seu estado civil (s, c, v, d): ').lower()\n",
+    "while estado_civil not in ['s', 'c', 'v', 'd']:\n",
+    "    print('O estado cívil deve ser s, c, v, d !')\n",
+    "    nome = input('Digite o seu estado civil (s, c, v, d): ')\n"
    ]
   },
   {
@@ -3480,10 +3596,29 @@
    "execution_count": 33,
    "id": "accda254",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Não é primo\n"
+     ]
+    }
+   ],
    "source": [
     "#Exercício 6 - Faça um programa que peça um número inteiro e determine se ele é ou não um número primo. Um número primo é aquele que é divisível somente por ele mesmo e por 1.\n",
-    "#Dica: Utilize o operador aritmético `%`, que retorna o resto da divisão de dois números."
+    "#Dica: Utilize o operador aritmético `%`, que retorna o resto da divisão de dois números.\n",
+    "number = int(input('Digite um número: '))\n",
+    "check = 0\n",
+    "for i in range(2,number):\n",
+    "    if number % i == 0:\n",
+    "        check = 1\n",
+    "        break\n",
+    "    \n",
+    "if check == 0:\n",
+    "    print('É primo')\n",
+    "else:\n",
+    "    print('Não é primo')"
    ]
   }
  ],
