--- a/projeto_1.ipynb
+++ b/projeto_1.ipynb
@@ -5,6 +5,69 @@
    "execution_count": null,
    "id": "334df3dc",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Essa escolha não existe\n",
+      "Essa escolha não existe\n",
+      "Esta opção não existe\n",
+      "2.0 + 6.0 = 8.0\n",
+      "Obrigado por usar a nossa calculadora\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Calculadora\n",
+    "\n",
+    "while True:\n",
+    "    opcao = input('0: Soma\\n1: Subtração\\n2: Multiplicação\\n3: Divisão\\n4: Exponenciação\\nEscolha a operação que deseja realizar: ')\n",
+    "\n",
+    "    if opcao in ('0', '1', '2', '3', '4'):\n",
+    "        numb1 = float(input('Digite um número: '))\n",
+    "        numb2 = float(input('Digite outro número: '))\n",
+    "        if opcao == '0':\n",
+    "            resultado = numb1 + numb2\n",
+    "            print(f'{numb1} + {numb2} = {resultado}')\n",
+    "        elif opcao == '1':\n",
+    "            resultado = numb1 - numb2\n",
+    "            print(f'{numb1} - {numb2} = {resultado}')\n",
+    "        elif opcao == '2':\n",
+    "            resultado = numb1 * numb2\n",
+    "            print(f'{numb1} x {numb2} = {resultado}')\n",
+    "        elif opcao == '3':\n",
+    "            resultado = numb1 / numb2\n",
+    "            print(f'{numb1} / {numb2} = {resultado}')\n",
+    "        elif opcao == '4':\n",
+    "            resultado = numb1 ** numb2\n",
+    "            print(f'{numb1} elevado a {numb2} = {resultado}')\n",
+    "    else:\n",
+    "        print('Essa escolha não existe')\n",
+    "    \n",
+    "    sair = input('Deseja fazer outra operação? (s/n)').lower()\n",
+    "    if sair in ('s', 'n'):\n",
+    "        if sair == 'n':\n",
+    "            break\n",
+    "        else:\n",
+    "            continue\n",
+    "    else:\n",
+    "        print('Esta opção não existe')\n",
+    "        continue\n",
+    "print('Obrigado por usar a nossa calculadora')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9ff6544",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb27548d",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
