--- a/projeto_1.ipynb
+++ b/projeto_1.ipynb
@@ -5,19 +5,7 @@
    "execution_count": null,
    "id": "334df3dc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Essa escolha não existe\n",
-      "Essa escolha não existe\n",
-      "Esta opção não existe\n",
-      "2.0 + 6.0 = 8.0\n",
-      "Obrigado por usar a nossa calculadora\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Calculadora\n",
     "\n",
@@ -58,10 +46,62 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d9ff6544",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "#Resposta da Asimov\n",
+    "import os\n",
+    "\n",
+    "print('===============')\n",
+    "operations = {\n",
+    "    '+': 'Soma',\n",
+    "    '-': 'Subtração',\n",
+    "    '*': 'Multiplicação',\n",
+    "    '/': 'Divisão',\n",
+    "    '^': 'Exponenciação'\n",
+    "}\n",
+    "\n",
+    "while True:\n",
+    "    os.system('clear')\n",
+    "    i = 0\n",
+    "    for op, name in operations.items():\n",
+    "        print(i, ':', name)\n",
+    "        i += 1\n",
+    "    print('')\n",
+    "    print('Escolha a operação que deseja realizar:')\n",
+    "    op = int(input())\n",
+    "    op_string = list(operations.keys())[op]\n",
+    "    print('')\n",
+    "    print(f'{op_string} escolhida.')\n",
+    "    print('Qual o primeiro valor: ')\n",
+    "    v1 = float(input())\n",
+    "    print('Qual o segundo valor:  ')\n",
+    "    v2 = float(input())\n",
+    "    \n",
+    "    if op == 0:\n",
+    "        result = v1 + v2\n",
+    "    elif op == 1:\n",
+    "        result = v1 - v2\n",
+    "    elif op == 2:\n",
+    "        result = v1 * v2\n",
+    "    elif op == 3:\n",
+    "        result = v1 / v2\n",
+    "    elif op == 4:\n",
+    "        result = v1 ** v2\n",
+    "        \n",
+    "    print('')\n",
+    "    print(f'{v1} {op_string} {v2} = {result}')\n",
+    "    print('')\n",
+    "    prinit('===========')\n",
+    "\n",
+    "    print('Deseja fazer mais alguma operação? (Digite 1 para sair)')    \n",
+    "    comando  = int(input())\n",
+    "    if comando == 1:\n",
+    "        break"
+   ]
   },
   {
    "cell_type": "code",
